--- a/pom.xml
+++ b/pom.xml
@@ -7,24 +7,51 @@
 	<name>HelpPages</name>
 	<description>HelpPages - Bukkit Plugin</description>
 	<build>
+		<finalName>${project.artifactId}</finalName>
+		<defaultGoal>clean install</defaultGoal>
+		<sourceDirectory>${basedir}/src/</sourceDirectory>
 		<resources>
 			<resource>
-				<targetPath>.</targetPath>
-				<directory>${basedir}/src/main/resources/</directory>
-				<filtering>true</filtering>
+				<directory>${project.basedir}/src/main/resources</directory>
 				<includes>
-					<include>plugin.yml</include>
+					<include>**</include>
 				</includes>
+				<filtering>true</filtering>
 			</resource>
 		</resources>
-		<sourceDirectory>src</sourceDirectory>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.0</version>
+				<version>2.0.2</version>
 				<configuration>
-					<source />
-					<target />
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<descriptors>
+						<descriptor>src/main/assembly/package.xml</descriptor>
+					</descriptors>
+				</configuration>
+				<executions>
+					<execution>
+						<id>build</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-release-plugin</artifactId>
+				<configuration>
+					<preparationGoals>assembly:assembly</preparationGoals>
+					<goals>assembly:assembly</goals>
+					<tagNameFormat>STABLE-@{project.version}</tagNameFormat>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -39,7 +66,7 @@
 		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>bukkit</artifactId>
-			<version>1.5.2-R1.0</version>
+			<version>1.6.2-R0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
