--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<name>HelpPages</name>
 	<description>HelpPages - Bukkit Plugin</description>
 	<build>
-		<finalName>PlayerLookup-${project.version}-b${BUILD_NUMBER}</finalName>
+		<finalName>${project.name}-${project.version}</finalName>
 		<defaultGoal>clean install</defaultGoal>
 		<sourceDirectory>${basedir}/src/</sourceDirectory>
 		<resources>
