--- a/pom.xml
+++ b/pom.xml
@@ -3,31 +3,52 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>HelpPages</groupId>
 	<artifactId>HelpPages</artifactId>
-	<version>1.4.1 - dev</version>
 	<name>HelpPages</name>
 	<description>HelpPages - Bukkit Plugin</description>
 	<build>
-		<finalName>${project.name}-${project.version}</finalName>
-		<defaultGoal>clean install</defaultGoal>
-		<sourceDirectory>${basedir}/src/</sourceDirectory>
+		<finalName>HelpPages.jar</finalName>
 		<resources>
 			<resource>
-				<directory>${project.basedir}/src/main/resources</directory>
-				<includes>
-					<include>**</include>
-				</includes>
+				<targetPath>.</targetPath>
+				<directory>${basedir}/src/main/resources/</directory>
 				<filtering>true</filtering>
+				<includes>
+					<include>plugin.yml</include>
+				</includes>
 			</resource>
 		</resources>
+		<sourceDirectory>src</sourceDirectory>
 		<plugins>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.0.2</version>
+				<version>3.0</version>
 				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
+					<source />
+					<target />
 				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-clean-plugin</artifactId>
+				<version>2.2</version>
+				<executions>
+					<execution>
+						<id>auto-clean</id>
+						<phase>install</phase>
+						<goals>
+							<goal>clean</goal>
+						</goals>
+						<configuration>
+							<filesets>
+								<fileset>
+									<directory>${project.build.outputDirectory}</directory>
+									<includes>
+										<include>target/*.jar</include>
+									</includes>
+								</fileset>
+							</filesets>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
@@ -41,7 +62,7 @@
 		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>bukkit</artifactId>
-			<version>1.6.2-R0.1-SNAPSHOT</version>
+			<version>1.5.2-R1.0</version>
 		</dependency>
 	</dependencies>
 </project>
