--- a/pom.xml
+++ b/pom.xml
@@ -5,50 +5,54 @@
 	<artifactId>HelpPages</artifactId>
 	<name>HelpPages</name>
 	<description>HelpPages - Bukkit Plugin</description>
+	<version>1.5.1</version>
 	<build>
-		<finalName>HelpPages.jar</finalName>
+		<finalName>${project.artifactId}</finalName>
+		<defaultGoal>clean install</defaultGoal>
+		<sourceDirectory>${basedir}/src/</sourceDirectory>
 		<resources>
 			<resource>
-				<targetPath>.</targetPath>
-				<directory>${basedir}/src/main/resources/</directory>
-				<filtering>true</filtering>
+				<directory>${project.basedir}/src/main/resources</directory>
 				<includes>
 					<include>plugin.yml</include>
 				</includes>
+				<filtering>true</filtering>
 			</resource>
 		</resources>
-		<sourceDirectory>src</sourceDirectory>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.0</version>
+				<version>2.0.2</version>
 				<configuration>
-					<source />
-					<target />
+					<source>1.6</source>
+					<target>1.6</target>
 				</configuration>
 			</plugin>
 			<plugin>
-				<artifactId>maven-clean-plugin</artifactId>
-				<version>2.2</version>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<descriptors>
+						<descriptor>src/main/assembly/package.xml</descriptor>
+					</descriptors>
+				</configuration>
 				<executions>
 					<execution>
-						<id>auto-clean</id>
-						<phase>install</phase>
+						<id>build</id>
+						<phase>package</phase>
 						<goals>
-							<goal>clean</goal>
+							<goal>single</goal>
 						</goals>
-						<configuration>
-							<filesets>
-								<fileset>
-									<directory>${project.build.outputDirectory}</directory>
-									<includes>
-										<include>target/*.jar</include>
-									</includes>
-								</fileset>
-							</filesets>
-						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-release-plugin</artifactId>
+				<configuration>
+					<preparationGoals>assembly:assembly</preparationGoals>
+					<goals>assembly:assembly</goals>
+					<tagNameFormat>STABLE-@{project.version}</tagNameFormat>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
@@ -65,5 +69,4 @@
 			<version>1.6.2-R0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
-	<version>1.5.1</version>
 </project>
